--- a/templates/react_app/index.html.twig
+++ b/templates/react_app/index.html.twig
@@ -1,7 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello IndexController!{% endblock %}
+{% block stylesheets %}
+    {{ encore_entry_link_tags('react_app') }}
+{% endblock %}
 
+{% block javascripts %}
+    {{ encore_entry_script_tags('react_app') }}
+{% endblock %}
 {% block body %}
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
