--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -73,18 +73,22 @@ body {
         min-width: 150px;
     }
 }
+
 $navbar-logo-size: 64px;
-$page-with-navbar-size: calc(100vh - $navbar-logo-size - (0.5rem * 2));
+$page-with-navbar-size: calc(100vh - $navbar-logo-size - (0.5rem * 4));
 .NavBarLogo {
     width: $navbar-logo-size;
 }
+
+// PAGE CONNEXION
+
+
 // PAGE POUR SCANNER LA PUCE
 .fullScanPage {
     height: $page-with-navbar-size;
     
-    // TITRE NAVBAR, À RETIRER QUAND LA NAVBAR SERA INTÉGRÉE
-    h1 {
-        text-align: center;
+    // TITRE ACCUEIL
+    homeTitle {
         color: $primary;
     }
 
@@ -94,7 +98,7 @@ $page-with-navbar-size: calc(100vh - $navbar-logo-size - (0.5rem * 2));
     }
 
     .logoScanPage {
-        width: 200px;
+        width: 150px;
     }
 
 }
