--- a/templates/react_app/index.html.twig
+++ b/templates/react_app/index.html.twig
@@ -8,6 +8,9 @@
 {% block javascripts %}
     {{ encore_entry_script_tags('react_app') }}
 {% endblock %}
+
+{% block html_attr %}data-bs-theme="dark"{% endblock %}
+
 {% block body %}
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
