--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -107,3 +107,13 @@ $page-with-navbar-size: calc(100vh - $navbar-logo-size - (0.5rem * 4));
     height: $page-with-navbar-size;
     // font-family: 'Source Sans Bold', 'Times New Roman';
 }
+
+// PAGE INFOS USER
+.titleInfosUser {
+    text-align: center;
+}
+
+.btnInfosUser {
+    display: flex;
+    align-self: center;
+}
