ajout des questions reponses partie admin sur intervention

--- a/templates/intervention/index.html.twig
+++ b/templates/intervention/index.html.twig
@@ -15,7 +15,7 @@
         <tbody>
         {% for intervention in interventionType %}
         <pre>
-            {{ dump(intervention) }}
+            {# {{ dump(intervention) }} #}
         </pre>
             {# <tr>
                <td>{{ intervention.type }}</td>
