--- a/templates/react_app/index.html.twig
+++ b/templates/react_app/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello IndexController!{% endblock %}
+{% block title %}Oktopuce{% endblock %}
 {% block stylesheets %}
     {{ encore_entry_link_tags('react_app') }}
 {% endblock %}
