Modification des noms dans la Navbar, ClimPropreUI, ChoixEquipement

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -124,3 +124,6 @@ $page-with-navbar-size: calc(100vh - $navbar-logo-size - (0.5rem * 4));
 .siteListContainer {
     height: $page-with-navbar-size;
 }
+
+// PAGE CLIMPROPRE
+
